syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";

package com.paozero.game.protobuf;
import "base.proto";

message RpcRequest{
  string channelKey = 1;
  string openId = 2;
  string traceId = 3;
  Msg msg = 4;
}

message RpcResponse{
  int32 code = 1;
  int32 businessId = 2;
}

service UserService{
  rpc dispatch(RpcRequest) returns (RpcResponse);
}

service GameService{
  rpc dispatch(RpcRequest) returns (RpcResponse);
}

service NotifyService{
  rpc dispatch(RpcRequest) returns (RpcResponse);
}